fix greedy overflow position and color

--- a/_sass/minimal-mistakes/_colors.scss
+++ b/_sass/minimal-mistakes/_colors.scss
@@ -170,7 +170,7 @@ figcaption {
     }
 
     &:after {
-      border-color: $border-color transparent;
+      border-color: $background-color transparent;
     }
 
     li {
