--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -77,9 +77,8 @@
   .hidden-links {
     position: absolute;
     top: 100%;
-    right: 0;
+    right: 1rem;
     margin-top: 15px;
-    padding: 5px;
     border-width: 1px;
     border-style: solid;
     border-radius: $border-radius;
